[package]
name = "cf-webgl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
winit = "0.28.6"
env_logger = "0.10.0"
log = "0.4.20"

pollster = "0.3.0"
anyhow = "1.0.75"

bytemuck = { version = "1.12", features = [ "derive" ]}

console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.17", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[lib]
crate-type = ["cdylib", "rlib"]
